@@ -255,6 +255,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 28752) XCache doesn't work in CLI mode.
 * (bug 28076) Thumbnail height limited to 360 pixels on Special:Listfiles
 * (bug 22227) Special:Listfiles no longer throws an error on bogus file entries
+* (bug 19408) user_properties.up_property: 32 bytes is not enough.
 
 === API changes in 1.18 ===
 * (bug 26339) Throw warning when truncating an overlarge API result.
